src/test/ui/argument-suggestions/permuted_arguments.stderr
error[E0059]: arguments to this function are incorrect
  --> $DIR/permuted_arguments.rs:10:3
   |
LL |   three_args(1.0, "", 1);
   |   ^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/permuted_arguments.rs:5:4
   |
LL | fn three_args(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------
help: make these changes
   |
LL |   three_args(1, 1.0, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^

error[E0059]: arguments to this function are incorrect
  --> $DIR/permuted_arguments.rs:12:3
   |
LL |   many_args(X {}, Y {}, 1, 1.0, "");
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> $DIR/permuted_arguments.rs:6:4
   |
LL | fn many_args(_a: i32, _b: f32, _c: &str, _d: X, _e: Y) {}
   |    ^^^^^^^^^ -------  -------  --------  -----  -----
help: make these changes
   |
LL |   many_args(1, 1.0, "", X {}, Y {});
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0059`.
